--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Assignment1</title>
 </head>
 <body>
-    <head>
-
-    </head>
+    <header>
+<nav>
+    <h2>LOGO</h2>
+    <button class="btn-1"><a href="#" class="a-1"><span class="span-1">Sign Up</span></a></button>
+</nav>
+<div class="div-1">
+<div class="div-2">  Cool Dark UI Template for Webflow Agencies!</div>
+    <button class="btn-2"><span class="span-2">Stay Focused</span></button>
+</div>
+    </header>
     <main>
-
+<div>
+    <div class="div-3">
+        <h1>See It in Action</h1>
+        <p>Explore the live preview and imagine your bran</p>
+    </div>
+</div>
     </main>
     <footer>
         
