get started section added

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@ Joined Thousands of Productive Users </p>
 <img src="Assets/icon-star.png">
 <img src="Assets/icon-star.png"></div>
 <div class="review-div">
-<h2 class="h2">Loved by Designers</h2>
-<p class="review-div-p">This Template instantly leveled up our presence." -Studio Vertex</p>
+<h2 class="h2">Loved by Siam</h2>
+<p class="review-div-p">This Template instantly leveled up our presence." -Siam</p>
 </div>
 <div class="reviewer-introduce-div">
     <div class="reviwer-image-div">
 <img src="Assets/avatar.png" class="reviewer-image"></div>
-<div class="reviewer-name-div"><h4>Reviewer name</h4>
-<p class="date-p">Date</p></div>
+<div class="reviewer-name-div"><h4>Siam</h4>
+<p class="date-p">12/07/2025</p></div>
 </div>
     </div>
     <div class="user-review">
@@ -73,14 +73,14 @@ Joined Thousands of Productive Users </p>
 <img src="Assets/icon-star.png">
 <img src="Assets/icon-star.png"></div>
 <div class="review-div">
-<h2 class="h2">Loved by Designers</h2>
-<p class="review-div-p">This Template instantly leveled up our presence." -Studio Vertex</p>
+<h2 class="h2">Loved by Jack</h2>
+<p class="review-div-p">This Template instantly leveled up our presence." - Jack</p>
 </div>
 <div class="reviewer-introduce-div">
     <div class="reviwer-image-div">
 <img src="Assets/avatar.png" class="reviewer-image"></div>
-<div class="reviewer-name-div"><h4>Reviewer name</h4>
-<p class="date-p">Date</p></div>
+<div class="reviewer-name-div"><h4>Jack</h4>
+<p class="date-p">12/07/2025</p></div>
 </div>
     </div>
 
@@ -91,19 +91,26 @@ Joined Thousands of Productive Users </p>
 <img src="Assets/icon-star.png">
 <img src="Assets/icon-star.png"></div>
 <div class="review-div">
-<h2 class="h2">Loved by Designers</h2>
-<p class="review-div-p">This Template instantly leveled up our presence." -Studio Vertex</p>
+<h2 class="h2">Loved by David</h2>
+<p class="review-div-p">This Template instantly leveled up our presence." -David</p>
 </div>
 <div class="reviewer-introduce-div">
     <div class="reviwer-image-div">
 <img src="Assets/avatar.png" class="reviewer-image"></div>
-<div class="reviewer-name-div"><h4>Reviewer name</h4>
-<p class="date-p">Date</p></div>
+<div class="reviewer-name-div"><h4>David</h4>
+<p class="date-p">12/07/2025</p></div>
 </div>
     </div>
 
     </div>
     
+    </div>
+    <div class="Template-div">
+       <p class="p-5">Ready to focus better</p>
+       <p class="p-6"> "This template instantly leveled up our presence" - studio  Vertex</p>
+       <button class="btn-4"> Get Started Free</button>
+      <div class="wc-big-div"><img src="Assets/wc-big.png" class="wc-big"></div>
+
     </div>
 
     
