Let's Get in Touch Section added

--- a/index.html
+++ b/index.html
@@ -112,8 +112,22 @@ Joined Thousands of Productive Users </p>
       <div class="wc-big-div"><img src="Assets/wc-big.png" class="wc-big"></div>
 
     </div>
-
-    
+<div class="getintouch-div-1">
+    <div class="getintouch-div-2">
+        <p class="getintouch-1">Let's Get in Touch</p>
+    </div>
+    <div class="getintouch-div-3">
+        <form >
+        <label for="email" >Email<br>
+        <input type="email" placeholder="example@gmail.com"></label><br>
+        <label for="full name" >Name</label><br>
+        <input type="text" placeholder="full name"><br>
+        <label for="textarea">Message</label><br>
+        <textarea >write your message</textarea><br>
+        <button class="btn-5">Get in Touch</button>
+        </form>
+    </div>
+    </div>
     </div>
    
 
