--- a/index.html
+++ b/index.html
@@ -129,14 +129,23 @@ Joined Thousands of Productive Users </p>
     </div>
     </div>
     </div>
-   
 
-
-   
 
     </main>
     <footer>
-        
+        <div class="footer-div-1"><div class="footer-div-2"><h1 class="footer-div-3">LOGO</h1></div>
+    <p class="footer-p">Ready to elevate your online presence? Contact us today to discuss<br>
+        your project and discover how we can bring your vision to life
+    </p>
+    <div class="footer-div-4">
+<ul>
+    <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+        <li><a href="#">How it Works</a></li>
+          <li><a href="#">Services</a></li>
+</ul></div>
+
+</div>
     </footer>
     
 </body>
